--- a/Shop.API.Order/dockerfile
+++ b/Shop.API.Order/dockerfile
@@ -2,6 +2,8 @@ FROM mcr.microsoft.com/dotnet/core/sdk:3.1 as builder
 WORKDIR /src
 COPY ./Shop.API.Order.csproj .
 RUN dotnet restore Shop.API.Order.csproj
+
+
 COPY . .
 RUN dotnet build Shop.API.Order.csproj -c release -o /src/out
 
@@ -15,3 +17,5 @@ ENTRYPOINT ["dotnet", "Shop.API.Order.dll"]
 
 # docker build . -t thirul/kubedemo:0.0.2
 # run docker image: docker run -it -p 8081:80 kubedemo:0.0.1
+# docker run -it -e 'server=12.2.2.' -e 'user:duuu' -e 'password:i9494' -p 8222:80 helloworld:0.0.1
+
