SQL Server container project added and can able to run SQL container and running with API project.

--- a/Shop.API.Order/appsettings.json
+++ b/Shop.API.Order/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1448;Database=eShopOrder;User Id=SA;Password=Pass@1234"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
