--- a/Shop.API.Order/Database/dockerfile
+++ b/Shop.API.Order/Database/dockerfile
@@ -1,14 +1,25 @@
-FROM mcr.microsoft.com/mssql/server:2019-CU3-ubuntu-18.04
-COPY ./Scripts/order-db.sql .
+# We choose exact tag (not 'latest'), to be sure that new version wont break creating image
+FROM mcr.microsoft.com/mssql/server:2017-CU17-ubuntu
+
+# Create app directory
+RUN mkdir -p /usr/src/app
+WORKDIR /usr/src/app
+
+# Copy initialization scripts
+COPY . /usr/src/app
+
+# Grant permissions for the run-initialization script to be executable
+RUN chmod +x /usr/src/app/run-initialization.sh
+
+# Set environment variables, not to have to write them with docker run command
+# Note: make sure that your password matches what is in the run-initialization script 
+ENV SA_PASSWORD Pass@1234
 ENV ACCEPT_EULA Y
-ENV MSSQL_SA_PASSWORD Pass@1234
-RUN sleep 25 & /opt/mssql-tools/bin/sqlcmd -S localhost -U SA -P Pass@1234 -i /order-db.sql  & /opt/mssql/bin/sqlservr
+ENV MSSQL_PID Express
+
+# Expose port 1433 in case accesing from other container
 EXPOSE 1433
 
-
-
-#docker run -e "ACCEPT_EULA=Y" -e "MSSQL_SA_PASSWORD=<YourStrong!Passw0rd>" -p 1401:1433 -d mcr.microsoft.com/mssql/server:2019-GA-ubuntu-16.04
-#docker run -e "ACCEPT_EULA=Y" -e "MSSQL_SA_PASSWORD=<YourStrong!Passw0rd>" -p 1402:1433 -d mcr.microsoft.com/mssql/server:2019-GA-ubuntu-16.04
-
-
-#sleep 25 && /opt/mssql-tools/bin/sqlcmd -S localhost -U SA -P pass@1234 -i /order.database.sql & /opt/mssql/bin/sqlservr
+# Run Microsoft SQl Server and initialization script (at the same time)
+# Note: If you want to start MsSQL only (without initialization script) you can comment bellow line out, CMD entry from base image will be taken
+CMD /bin/bash ./entrypoint.sh
